wwwroot/css/site.css
/* ... */
.devSaturation[data-color="r"] {
    background: #ff0000;    
}

.devSaturation[data-color="g"] {
    background: #00ff00;
}

.devSaturation[data-color="b"] {
    background: #0000ff;
}

.btn.selected {
    background-color: dimgrey;
    color: white;
}

.switch {
    position: relative;
    display: inline;
    float: right;
    width: 60px;
    height: 25px;
}

/* Hide default HTML checkbox */
.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

/* The slider */
.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 23px;
    width: 23px;
    left: 6px;
     bottom: 1px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
}

input:checked + .slider {
    background-color: #2196F3;
}

input:focus + .slider {
    box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}

.border, .border-left {
    padding: 10px;
    border: 1px solid #dee2e6 !important;
}

.border > h5, .border > label {
    text-align: left;
}

.border > .btn-group {
    text-align: center;
}

.border-left {
    text-align: left;
}

.border-left > h5 {
    width: 75%;
    display: inline-block;
}

.hintbtn {
    width: 10px;
    height: 10px;
    cursor: pointer;
    position:relative;
    top: 6px;
}

.hint {
    display: none;
    text-align: center;
}

.hintbtn > .material-icons {
    
}

.sectorRow, .nanoSectorRow {
    height: 33.33%;
}

.lightRegion, .clickRegion, .nanoRegion {
    background-image: url("../img/sector_unchecked_background.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    padding: 15px;
}

.lightRegion.checked, .clickRegion.checked, .nanoRegion.checked {
    background-image: url("../img/sector_checked_background.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

select {
    text-align-last: center;
    padding-right: 29px;
    text-indent: 5px;
}

.bmd-label-static {
    color: white !important;
}

#dsData, #lifxData {
    padding-top: 15px;
    font-size: 16px;
}


#dsName, #lifxName {
    font-size: 30px;
}

#dsIp, #lifxIp {
    font-size: 14px;
    top: -35px;
    position: relative;
}


.purdy {
    padding-right: 15px;
}

.modeLabel {
    position: absolute;
    bottom: -19px;
    left: -1px;
    width: 100%;
    text-align: center;
}

.btnWrap {
    display: inline-block;
    position: relative;
}

.mapBrightness {
    margin-top: 25px;
}

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    position: relative;
    top: 0;
    z-index: 1;
    width: 11px;
    height: 11px;
    cursor: pointer;
    -webkit-box-shadow: 0 6px 5px 0 rgba(0, 0, 0, 0.6);
    -moz-box-shadow: 0 6px 5px 0 rgba(0, 0, 0, 0.6);
    box-shadow: 0 6px 5px 0 rgba(0, 0, 0, 0.6);
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ebf1f6), color-stop(50%, #abd3ee), color-stop(51%, #89c3eb), color-stop(100%, #d5ebfb));
}

input[type="range"]:hover ~ #rangevalue,
input[type="range"]:active ~ #rangevalue {
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
    filter: alpha(opacity=100);
    opacity: 1;
    top: -75px;
}

#lifxIcon {
    background-image: url("../img/lifx_icon.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}


#iconWrap, #lifxIcon {
    width: 80px;
    height: 80px;
    margin: 15px;
}

#iconWrap.group {
    background-image: url("../img/group_icon.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

#iconWrap.Connect {
    background-image: url("../img/connect_icon.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

#iconWrap.SideKick {
    background-image: url("../img/sidekick_icon.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

#iconWrap.DreamScreen {
    background-image: url("../img/dreamscreen_icon.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

#iconWrap.DreamScreenSolo {
    background-image: url("../img/dreamscreensolo_icon.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

#iconWrap.DreamScreen4K {
    background-image: url("../img/dreamscreen4k_icon.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}


#linkBtn, #nanoBtn {
    cursor: pointer;
    width: 150px;
    height: 150px;
    margin: 0 auto;
    position: relative;
}

#linkImg {
    background-image: url("../img/hue_bridge_icon.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    height: 150px;
    width: 150px;
    position: relative;
    z-index: 6;

}


#nanoImg {
    background-image: url("../img/nanoleaf_icon.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    height: 150px;
    width: 150px;
    position: relative;
    z-index: 6;
}

.linkImg {
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    position: absolute;
    height: 30px;
    width: 30px;
}

.linked .linkImg {
    background-image: url("../img/check_overlay.png");
}

.unlinked .linkImg {
    background-image: url("../img/x_overlay.png");
}
/* ... */

